# Skuld

./: CMakeLists.txt  build.py
cmake/: BinaryToHeader.cmake  MergeStaticLibs.cmake  Skuld.cmake
cmake/module/: FindFbxSdk.cmake  FindVulkan.cmake  VerboseMessage.cmake
licenses/: DDSTextureLoader_license.txt  jsoncpp_license.txt  lua_license.txt  tinyxml2_license.txt
resources/: EffectScript.json  HLSL.hlsl  test-rle.tga  test.tga
src/: CMakeLists.txt
src/extra/: CMakeLists.txt
src/extra/EnhanceEffect/: CMakeLists.txt  EnhanceEffect.cpp
src/extra/EnhanceEffect/include/: EnhanceEffect.h
src/extra/ShaderCrossCompiler/: CMakeLists.txt  Compiler.h  DXBCCompiler.cpp  DXILCompiler.cpp  SPIRVCompiler.cpp  ShaderCrossCompiler.cpp
src/include/Skuld/: Bitmap.h  Check.h  DynamicLibrary.h  Exception.h  Export.h  FileStream.h  GlobalConfig.h  IDisposable.h  LanguagePack.h  License.h  MathStruct.h  MemoryFile.h  MemoryStream.h  Path.h  PixelFormat.h  Plugin.h  Ptr.hpp  Stream.h  String.h  Text.h
src/include/Skuld/Algorithm/: CompressedStream.h  EncryptedStream.h  Hash.h
src/include/Skuld/Codec/: AudioCodec.h  BitmapCodec.h
src/include/Skuld/Core/: Effect.h  Engine3D.h
src/include/Skuld/Extra/: ShaderCrossCompiler.h
src/include/Skuld/Render3D/: BufferObject.h  FrameBufferObject.h  InputLayout.h  Render3DContext.h  Render3DFactory.h  RenderState.h  SamplerObject.h  Shader.h  ShaderObject.h  Texture.h
src/include/Skuld/Script/: Script.h
src/include/Skuld/Storage/: Database.h  libAssets.h  libMesh.h
src/include/Skuld/UI/: Displayable.h  UI.h  UIButton.h  UIContext.h  UIControl.h  UIFont.h  UIImage.h  UIImageDraw.h  UIInput.h
src/module/: CMakeLists.txt
src/module/Algorithm/: AES.cpp  CMakeLists.txt  CRC.cpp  Common.cpp  Common.h  LZMA.cpp  deflate.cpp  xor.cpp
src/module/Codec/: AudioDecoder.h  AudioDecoderOgg.cpp  AudioDecoderWav.cpp  AudioEncoder.h  BitmapDecoder.h  BitmapDecoderEtc1.cpp  BitmapDecoderIcraw.cpp  BitmapDecoderJpeg.cpp  BitmapDecoderPng.cpp  BitmapDecoderTga.cpp  BitmapEncoder.h  BitmapEncoderEtc1.cpp  BitmapEncoderIcraw.cpp  BitmapEncoderJpeg.cpp  BitmapEncoderPng.cpp  BitmapEncoderTga.cpp  CMakeLists.txt  CodecRegister.cpp  TextureDecoder.h  TextureDecoderEtc1.cpp  VideoDecoder.h  VideoEncoder.h
src/module/Core3D/: CMakeLists.txt  Effect.cpp  EffectImpl.h  EffectSelector.cpp  EffectSelector.h  Engine3D.cpp  TextureManager.cpp  TextureManager.h
src/module/Script/: CMakeLists.txt  JavaScriptLoader.cpp  LuaLoader.cpp  MSILLoader.cpp  Script.cpp
src/module/Storage/: Assets.cpp  AssetsInternal.h  CMakeLists.txt  Record.cpp  Record.h  SQLite.cpp  libAssets.cpp  libMesh.cpp
src/module/Support/: Bitmap.cpp  CMakeLists.txt  Check.cpp  DynamicLibrary.cpp  Exception.cpp  Factory.h  FileStream.cpp  GlobalConfig.cpp  IDisposable.cpp  LanguagePack.cpp  License.cpp  MathLib.cpp  MathLib.h  MemoryFile.cpp  MemoryStream.cpp  Path.cpp  Plugin.cpp  PluginEntry.h  ReadCache.hpp  SIMDMath.cpp  SIMDMath.h  Stream.cpp  String.cpp  Text.cpp  WriteCache.hpp
src/module/UI/: CMakeLists.txt  UI.cpp  UIButton.cpp  UICairoContext.h  UICairoFont.cpp  UICairoFont.h  UICairoImage.h  UIContext.cpp  UIControl.cpp  UIImage.cpp  UIInternal.h
src/module/UI/Platform/: AndroidDisplayable.cpp  WindowsDisplayable.cpp  XDisplayable.cpp  macOSDisplayable.mm
src/plugins/: CMakeLists.txt
src/plugins/Audio/: CMakeLists.txt
src/plugins/Audio/XAudio2/: CMakeLists.txt  XAudio2Factory.cpp
src/plugins/Render3D/: CMakeLists.txt
src/plugins/Render3D/D3D11/: CMakeLists.txt  D3D11BufferObject.cpp  D3D11BufferObject.h  D3D11Context.cpp  D3D11Context.h  D3D11Factory.cpp  D3D11Factory.h  D3D11FrameBufferObject.cpp  D3D11FrameBufferObject.h  D3D11InputLayout.cpp  D3D11InputLayout.h  D3D11RenderState.cpp  D3D11RenderState.h  D3D11SamplerObject.cpp  D3D11SamplerObject.h  D3D11Shader.cpp  D3D11Shader.h  D3D11ShaderObject.cpp  D3D11ShaderObject.h  D3D11Texture.cpp  D3D11Texture.h  D3D11Texture1D.cpp  D3D11Texture1D.h  D3D11Texture2D.cpp  D3D11Texture2D.h  D3D11Texture3D.cpp  D3D11Texture3D.h  D3D11Utility.cpp  D3D11Utility.h
src/plugins/Render3D/Vulkan/: CMakeLists.txt  VulkanContext.cpp  VulkanContext.h  VulkanFactory.cpp  VulkanFactory.h
src/sdk/: Audio.cpp  Render2D.cpp  Render3D.cpp  WindowInfo.h
src/tests/: AssetsTest.cpp  BitmapDecoderTest.cpp  CMakeLists.txt  Core3DTest.cpp  DeflateStreamTest.cpp  EffectCompileTest.cpp  FileStreamTest.cpp  LZMAStreamTest.cpp  MSILLoaderTest.cpp  RecordTest.cpp  Render3DTest.cpp  StringTest.cpp  UIContextTest.cpp  XORStreamTest.cpp
src/tools/: CMakeLists.txt
src/tools/assetspak/: CMakeLists.txt  main.cpp
src/tools/effectc/: CMakeLists.txt  main.cpp
src/tools/imgconv/: CMakeLists.txt  main.cpp
utils/: bin2h.py
utils/MergeStaticLibs/: PrepareLibs.py
