add_unit_test(String StringTest.cpp)
add_unit_test(DeflateStream DeflateStreamTest.cpp)
add_unit_test(XORStream XORStreamTest.cpp)
add_unit_test(LZMAStream LZMAStreamTest.cpp)
add_unit_test(FileStream FileStreamTest.cpp)
add_unit_test(MSILLoader MSILLoaderTest.cpp)
add_unit_test(BitmapDecoder BitmapDecoderTest.cpp)
if (NOT SKULD_ANDROID)
	add_unit_test(Core3D Core3DTest.cpp)
	add_unit_test(Render3D Render3DTest.cpp)
	add_unit_test(UIContext UIContextTest.cpp)
endif()
add_unit_test(Record RecordTest.cpp)
add_unit_test(libAssets AssetsTest.cpp)
if (SKULD_WIN32)
    target_link_libraries(MSILLoaderTest winmm ws2_32 version mswsock)
elseif (SKULD_UNIX)
    target_link_libraries(MSILLoaderTest pthread dl m)
elseif (SKULD_MAC)
    target_link_libraries(MSILLoaderTest "-framework CoreFoundation" "-framework Foundation" "-framework System")
elseif (SKULD_ANDROID)
    target_link_libraries(MSILLoaderTest log android)
endif()